[package]
name = "graflog"
version = "1.3.0"
edition = "2024"
description = "Structured JSON logging for Rust applications optimized for Grafana ingestion"
license = "MIT"
repository = "https://github.com/bennekrouf/graflog"
documentation = "https://docs.rs/graflog"
homepage = "https://github.com/bennekrouf/graflog"
keywords = ["logging", "grafana", "json", "tracing", "structured"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
